Refactored code to add javaSpark for frontend